@@ -17,6 +17,10 @@ serviceAccount:
 sysdigSecureApiUrl: https://api.sysdigcloud.com
 # Put your <Sysdig-Secure-Secret-Token> in this value
 sysdigSecureToken: ""
+# Set to http://proxyIp:proxyPort in case connection to Sysdig Secure requires a proxy
+httpProxy: ""
+# List of hosts, IPs, or IPs in CIDR format that should not go through the proxy. We include "kubernetes" service and typical 10.0.0.0/8 services
+noProxy: kubernetes,10.0.0.0/8
 
 #Set to true to increase verbosity and output OPA input and rules in the log
 verboseLog: false
